# dis-client

./: .clang-format  .clang-tidy  .gdbinit  CMakeLists.txt  Config.cmake.in  Dependencies.cmake  LICENSE  README.md  clantidy_option.txt  cmake_option.cmake  main.cpp  packaging.cmake  vcpkg-configuration.json  vcpkg.json  vld.cmake.in
assets/data/: DebugPageInfo.json  DebugPageLayout.json
assets/font/scientific-calculator-lcd-font/misc/: readme-c46a.txt
bofimgui/include/bofimgui/: bof_imgui.h  bof_imgui_imnodes_internal.h  bof_imgui_internal.h
bofimgui/src/: bof_imgui.cpp  bof_imgui_imnodes.cpp  bof_imgui_internal.cpp  imnodes.cpp  save_load.cpp
bofwebrpc/: Config.cmake.in  Dependencies.private.cmake  vcpkg.json
bofwebrpc/lib/include/bofwebrpc/: bofgrpc.h  bofwebrpc.h  bofwebsocket.h
bofwebrpc/lib/src/: bofgrpc.cpp  bofwebsocket.cpp
bofwebrpc/tests/include/: gtestrunner.h
bofwebrpc/tests/src/: main.cpp
cmake/: fetch_content.cmake  fixup_vs_crt.cmake  vcpkg_install.cmake
doc/dis-client/: readme.md
include/: bof_imgui.h  bof_web_socket_client.h  boferr.h  bofstd.h  bofstd_export.h  dis_client.h  dis_client_websocket.h  dis_discovery.h  dis_service.h  version.h.in
src/: bof_imgui.cpp  bof_imgui_internal.cpp  bof_web_socket_client.cpp  dis_client.cpp  dis_client_websocket.cpp  dis_discovery.cpp  dis_service.cpp  ui.cpp
vcprj/: cmake_setting.vcprj  cmake_vcpkg_configure.vcprj  debug_html_web_app.vcprj  debug_linux_app.vcprj  debug_mp_launch.vcprj  debug_mp_task.vcprj  debug_node_web_app.vcprj  debug_python_script.vcprj  debug_windows_app.vcprj  exec_cmd.vcprj  problem_matcher_gdb.vcprj  problem_matcher_null.vcprj  problem_matcher_qemu.vcprj  readme.md  vcprj.bat  vcprj.py  vcprj.sh  vcprj_code-workspace.json  vcprj_help.vcprj  vcprj_keybindings.json  vcprj_launch.json  vcprj_settings.json  vcprj_tasks.json  vcprj_var_def.BHA.json  vcprj_var_def.json
webrpc/: CMakeLists.txt  Dependencies.cmake.in  vcpkg-configuration.json  vld.cmake.in
webrpc/lib/: CMakeLists.txt
webrpc/lib/include/webrpc/: grpc.h  webrpc.h  webrpcversioninfo.h.in  websocket.h
webrpc/lib/src/: grpc.cpp  websocket.cpp
webrpc/tests/: CMakeLists.txt
webrpc/tests/data/: dummy_webrpc.txt
webrpc/vcpkg/: fixup_vs_crt.cmake
webrpc/vld/: vld.ini
